changes for component interaction, automapper and methods

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-footer/create-test-footer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-footer/create-test-footer.html
@@ -1,15 +1,15 @@
 ﻿<div class="test-create-footer clearfix">
   <div class="container">
     <ul class="steps pull-left">
-      <li class="h5" [class.active]="router.url==='/tests/sections/' + testId"><a [routerLink]="['/tests',testId,'sections']">Select Sections</a></li>
+      <li class="h5" [class.active]="router.url==='/tests/' + testId + '/sections/' "><a [routerLink]="['/tests',testId,'sections']">Select Sections</a></li>
       <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
       <li class="h5" [class.active]="router.url==='/tests/' + testId + '/questions'"><a [routerLink]="['/tests',testId,'questions']">Select Questions</a></li>
       <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
       <li class="h5" [class.active]="router.url==='/tests/'+testId + '/settings'"><a [routerLink]="['/tests',testId,'settings']">Settings & Schedule</a></li>
     </ul>
     <div class="buttons-block pull-right" *ngIf="isTestSection">
-      <button type="button" class="btn">Save & Exit</button>
-      <button type="button" class="btn btn-primary">Save & Next</button>
+      <button type="button" class="btn" [routerLink]="['/tests']" (click)="saveSelectedCategoryAndExit()">Save & Exit</button>
+      <button type="button" class="btn btn-primary" [routerLink]="['/tests/questions',testId]" (click)="saveSelectedCategoryAndMoveNext()">Save & Next</button>
     </div>
     <div class="buttons-block pull-right" *ngIf="isTestQuestion">
       <button type="button" class="btn" (click)="saveAndExit()">Save & Exit</button>
