deselection functionality implemented and made required changes, unit testing

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/deselect-category.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/deselect-category.html
@@ -8,6 +8,6 @@
     </md-dialog-content>
     <md-dialog-actions>
         <button type="button" class="btn" md-dialog-close>No</button>
-        <button type="submit" class="btn btn-primary" (click)="Yes()">Yes</button>
+        <button type="submit" class="btn btn-primary" (click)="YesDeselectCategory()">Yes</button>
     </md-dialog-actions>
 </div>
