changes in unit testing, error handling at client side
made changes to resolve lint issue

resolved left lint isssues

added comments to services

code optimization, improved naming convention and added code which was removed acccidently

optimized code

changes to remove question after deselecting category

optimized and corrected the method to remove question

removed unused variable, namespace and corrected sequence of method in test case

changes as per sonarqube analysis suggestions

chnages for unit testing and deselection

changes for test questions

added comment

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -3,7 +3,7 @@
     <div class="container">
         <h5>Select sections to add in your test</h5>
         <ul class="sections-list">
-            <li *ngFor="let categories of testDetailsObj.categoryAcList"
+            <li *ngFor="let categories of testDetails.categoryAcList"
                 (click)="onSelect(categories)">
                 <label for="{{categories.categoryName}}">
                     <input type="checkbox" id="" [(ngModel)]="categories.isSelect" />
@@ -15,5 +15,5 @@
             </li>
         </ul>
     </div>
-    <create-test-footer (SaveAndExit)="SaveAndExit()" (SaveAndNext)="SaveAndNext()"></create-test-footer>
+    <create-test-footer (SaveCategory)="saveCategoryToExitOrMoveNext($event)"></create-test-footer>
 </div>
