Made changes for routing to instructionpage

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
@@ -4,7 +4,7 @@
         <h2>Test Instructions</h2>
         <p class="test-conduct-subtitle">Please read the Test Instructions carefully before starting the test.</p>
         <p class="test-info"><span class="h4">Total Test Duration: </span><span class="h2">{{instruction.duration}} mins</span></p>
-        <p class="test-info"><span class="h4">Total Questions: </span><span class="h2">{{instruction.totalNumberQuestions}}</span></p>
+        <p class="test-info"><span class="h4">Total Questions: </span><span class="h2">{{instruction.totalNumberOfQuestions}}</span></p>
         <p class="test-info"><span class="h4">Marking Pattern: </span></p>
         <table>
             <tr>
