--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/test-create-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/test-create-dialog.html
@@ -8,7 +8,7 @@
             <label class="h4">Test Name</label>
             <input type="text" id="name" name="name" class="form-control" (ngModelChange)="ChangeError()" placeholder="Ex. Software Developer Recruitment Test" [(ngModel)]="testNameReference" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&*^{}+;:<>()-]*$" maxlength="150" />
             <div class="errors-container">
-                <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.required">Name is required</span>
+                <span class="error-msg" *ngIf="isWhiteSpaceError || (name.touched && !name.valid && name.errors.required)">Name is required</span>
                 <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.pattern">Enter a valid Test Name</span>
                 <span class="error-msg" *ngIf="errorMessage">Test with this name already exists</span>
             </div>
