Common get method for getting test, unneccessary files removed

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -1,5 +1,5 @@
 ﻿<div class="test-create-steps test-questions">
-  <create-test-header [testSettings]="testSettings"></create-test-header>
+  <create-test-header [testDetails]="testDetails"></create-test-header>
   <div class="container">
     <h2>Select questions for each section</h2>
     <md2-accordion class="questions-selection" >
