--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -1,6 +1,6 @@
 ﻿<div class="test-create-steps test-settings">
   <form #settingsForm="ngForm">
-    <create-test-header [testSettings]="testSettings"></create-test-header>
+    <create-test-header [testDetails]="testDetails"></create-test-header>
     <div class="container">
       <h5>Settings & Schedule</h5>
       <div class="form-area">
@@ -29,14 +29,14 @@
           <label>IP Restrictions</label>
           <br />
           <div>
-            <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testSettings.fromIpAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+            <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testDetails.fromIpAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
             <br />
             <div class="errors-container">
               <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
             </div>
           </div>
           <div>
-            <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testSettings.toIpAddress" #To=ngModel pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+            <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testDetails.toIpAddress" #To=ngModel pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
             <br />
             <div class="errors-container">
               <span class="error-msg" *ngIf="To.errors && To.dirty" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
@@ -96,7 +96,7 @@
             <span class="error-msg" *ngIf="validTime">Warning Time should be less than Time Duration</span>
           </div>
         </div>
-        <create-test-footer (saveTestSettings)="saveTestSettings(testSettings.id,testSettings)" (launchTestDialog)="launchTestDialog(testSettings.id,testSettings)" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime"></create-test-footer>
+        <create-test-footer (saveTestSettings)="saveTestSettings(testDetails.id,testDetails)" (launchTestDialog)="launchTestDialog(testDetails.id,testDetails)" [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime"></create-test-footer>
       </div>
     </div> 
   </form>
