--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -132,6 +132,18 @@
                 <span class="unanswered">78</span>
                 <span class="unanswered">79</span>
                 <span class="unanswered">80</span>
+                <span class="unanswered">81</span>
+                <span class="unanswered">82</span>
+                <span class="unanswered">83</span>
+                <span class="unanswered">84</span>
+                <span class="unanswered">85</span>
+                <span class="unanswered">86</span>
+                <span class="unanswered">87</span>
+                <span class="unanswered">88</span>
+                <span class="unanswered">89</span>
+                <span class="unanswered">90</span>
+                <span class="unanswered">91</span>
+                <span class="unanswered">92</span>
             </div>
         </div>
         <div class="test-footer-bottom ptb10">
