--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -2,9 +2,9 @@
     <div class="test-create-header clearfix">
         <div class="container">
             <h1 class="pull-left">
-                <span>BBIT 10-08-2017</span>
+                <span class="test-name">BBIT 10-08-2017</span>
             </h1>
-            <div class="search-area pull-right">
+            <div class="search-area pull-right mt5">
                 <input type="text" placeholder="Search reports" [hidden]="!showSearchInput" (blur)="showSearchInput = false" />
                 <button type="button" (click)="showSearchInput = true"><i class="material-icons">search</i></button>
             </div>
