--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/change-password-dialog.html
@@ -6,7 +6,7 @@
     <form (ngSubmit)="changePassword(user)" #passwordForm="ngForm">
         <md-dialog-content>
             <div class="form-group">
-                <label class="h4">Current Password</label>
+                <label>Current Password</label>
                 <input type="password" class="form-control" [(ngModel)]="user.oldPassword" name="oldpassword" #oldpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
                 <div class="errors-container">
                     <span *ngIf='oldpassword.errors && (oldpassword.dirty || oldpassword.touched) && !oldpassword.errors.required' class='error-msg'>Please enter your current password</span>
@@ -14,7 +14,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="h4">New Password</label>
+                <label>New Password</label>
                 <input type="password" class="form-control" [(ngModel)]="user.newPassword" name="newpassword" #newpassword="ngModel" pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[@$!_%*#?&])[A-Za-z\d@$!_%*#?&]{8,14}$" required />
                 <div class="errors-container">
                     <span *ngIf='newpassword.errors && newpassword.errors.required && newpassword.touched && !newpassword.valid' class='error-msg'>Please enter new password</span>
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <label class="h4">Confirm Password</label>
+                <label>Confirm Password</label>
                 <input type="password" class="form-control" [(ngModel)]="user.confirmPassword" name="confirmpassword" #confirmpassword="ngModel" required (ngModelChange)="changeCurrentPassword()" />
                 <div class="errors-container">
                     <span *ngIf='confirmpassword.errors && (confirmpassword.dirty || confirmpassword.touched) && !newpassword.valid' class='error-msg' [hidden]='!confirmpassword.errors.required'>Please retype the new password</span>
