--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-dashboard/profile-dashboard.html
@@ -4,10 +4,10 @@
             <h1>Profile <a href="#" [routerLink]="['edit']"><em class="material-icons">mode_edit</em></a></h1>
         </div>
         <div class="fields-box">
-            <p><span class="h5">Name</span> {{user.name}}</p>
-            <p><span class="h5">Email</span> {{user.email}}</p>
-            <p><span class="h5">Contact Number</span> {{user.phoneNumber}}</p>
-            <p><span class="h5">Organization</span> {{user.organizationName}}</p>
+            <p><span class="font-semibold">Name</span> {{user.name}}</p>
+            <p><span class="font-semibold">Email</span> {{user.email}}</p>
+            <p><span class="font-semibold">Contact Number</span> {{user.phoneNumber}}</p>
+            <p><span class="font-semibold">Organization</span> {{user.organizationName}}</p>
             <p class="h5 cp-dialog-link" (click)="changePasswordDialog()">Change Password</p>
         </div>
     </div>
