--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/profile/profile-edit/profile-edit.html
@@ -6,26 +6,26 @@
         <div class="fields-box">
             <form (ngSubmit)='updateUserDetails()' #profileForm='ngForm'>
                 <div class="form-group">
-                    <label class="h4">Name</label>
+                    <label>Name</label>
                     <input type="text" class="form-control half-width" name="name" [(ngModel)]="editUser.name" #name="ngModel" required pattern="[A-Za-z\s]+$" maxlength="150" />
                     <div class="errors-container">
                         <span *ngIf='name.errors && (name.dirty || name.touched)' class='error-msg'>Name is required and it must contain only alphabets</span>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="h4">Email</label>
+                    <label>Email</label>
                     <input type="email" class="form-control half-width" name="email" [(ngModel)]="editUser.email" disabled />
                     <div class="errors-container"></div>
                 </div>
                 <div class="form-group">
-                    <label class="h4">Contact Number</label>
+                    <label>Contact Number</label>
                     <input type="text" class="form-control half-width" name="phonenumber" [(ngModel)]="editUser.phoneNumber" #phonenumber="ngModel" pattern="[0-9]+$" maxlength="10" minlength="10" />
                     <div class="errors-container">
                         <span *ngIf='phonenumber.errors && (phonenumber.dirty || phonenumber.touched)' class='error-msg'>Phone Numnber must be have 10 digits and should only contain numbers </span>
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="h4">Organization</label>
+                    <label>Organization</label>
                     <input type="text" class="form-control half-width" name="organizationname" [(ngModel)]="editUser.organizationName" #organizationname="ngModel" pattern="[A-Za-z\s]+$" maxlength="150"/>
                     <div class="errors-container">
                         <span *ngIf='organizationname.errors && (organizationname.dirty || organizationname.touched)' class='error-msg'>Organization Name must contain only alphabets</span>
