--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/individual-report/individual-report.html
@@ -2,7 +2,7 @@
     <div class="test-create-header clearfix">
         <div class="container">
             <h1 class="pull-left">
-                <span>BBIT 10-08-2017</span>
+                <span class="test-name">BBIT 10-08-2017</span>
             </h1>
             <div class="pull-right">
                 <button type="button" class="btn"><em class="material-icons">file_download</em> Download</button>
