--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -5,28 +5,28 @@
       <h5>Settings & Schedule</h5>
       <div class="form-area">
         <div class="form-group">
-          <label class="h4">Time Duration (mins)</label>
+          <label>Time Duration (mins)</label>
           <input type="text" class="form-control small-width" [(ngModel)]="testSettings.duration" name="Duration" placeholder="00" max="180" min="0" #Duration="ngModel" pattern="^\d{0,4}?$" (keyup)="isWarningTimeValid()" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="Duration.errors && Duration.dirty && !Duration.valid && Duration.errors.pattern">Invalid Time</span>
           </div>
         </div>
         <div class="form-group inline-field">
-          <label class="h4">Start Date & Time</label>
+          <label>Start Date & Time</label>
           <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
           <div class="errors-container">
             <span class="error-msg small-width" *ngIf="validStartDate">Start Date must be lesser than End Date and Time and greater than current Date and Time</span>
           </div>
         </div>
         <div class="form-group inline-field">
-          <label class="h4">End Date & Time</label>
+          <label>End Date & Time</label>
           <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.endDate" name="End Date" (mouseup)="isEndDateValid(testSettings.endDate)" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater then Start Date and Time</span>
           </div>
         </div>
         <div class="form-group ip-restrictions-field">
-          <label class="h4">IP Restrictions</label>
+          <label>IP Restrictions</label>
           <br />
           <div>
             <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testSettings.fromIpAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
@@ -44,7 +44,7 @@
           </div>
         </div>
         <div class="form-group">
-          <label class="h4">Browser Tolerance</label>
+          <label>Browser Tolerance</label>
           <select class="form-control half-width" [(ngModel)]="testSettings.browserTolerance" name="Browser Tolerance">
             <option>0</option>
             <option>1</option>
@@ -54,7 +54,7 @@
           <div class="errors-container"></div>
         </div>
         <div class="form-group">
-          <label class="h4">Question Order</label>
+          <label>Question Order</label>
           <select class="form-control half-width" [(ngModel)]="testSettings.questionOrder" name="questionOrder">
             <option value="0">Fixed</option>
             <option value="1">Random</option>
@@ -62,7 +62,7 @@
           <div class="errors-container"></div>
         </div>
         <div class="form-group">
-          <label class="h4">Option Order</label>
+          <label>Option Order</label>
           <select class="form-control half-width" [(ngModel)]="testSettings.optionOrder" name="optionOrder">
             <option value="0">Fixed</option>
             <option value="1">Random</option>
@@ -70,26 +70,26 @@
           <div class="errors-container"></div>
         </div>
         <div class="form-group inline-field">
-          <label class="h4">Correct Marks</label>
+          <label>Correct Marks</label>
           <input type="text" class="form-control small-width" [(ngModel)]="testSettings.correctMarks" name="CorrectMarks" #CorrectMarks="ngModel" pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="CorrectMarks.errors && CorrectMarks.dirty && !CorrectMarks.valid && CorrectMarks.errors.pattern">Enter valid correct marks</span>
           </div>
         </div>
         <div class="form-group inline-field">
-          <label class="h4">Incorrect Marks</label>
+          <label>Incorrect Marks</label>
           <input type="text" class="form-control small-width" [(ngModel)]="testSettings.incorrectMarks" name="IncorrectMarks" #IncorrectMarks="ngModel" pattern="^\d{0,4}(\.\d{1,2})?$" min="0" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="IncorrectMarks.errors && IncorrectMarks.dirty && !IncorrectMarks.valid && IncorrectMarks.errors.pattern">Enter valid incorrect marks</span>
           </div>
         </div>
         <div class="form-group">
-          <label class="h4">Warning Message</label>
+          <label>Warning Message</label>
           <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testSettings.warningMessage" name="Warning Message" maxlength="255"></textarea>
           <div class="errors-container"></div>
         </div>
         <div class="form-group">
-          <label class="h4">Warning Time (mins)</label>
+          <label>Warning Time (mins)</label>
           <input type="text" pattern="[0-9]*" class="form-control small-width" placeholder="00" [(ngModel)]="testSettings.warningTime" name="WarningTime" min="0" #WarningTime="ngModel" (keyup)="isWarningTimeValid()" />
           <div class="errors-container">
             <span class="error-msg" *ngIf="WarningTime.errors && WarningTime.dirty && !WarningTime.valid && WarningTime.errors.pattern">Invalid Time</span>
