--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
@@ -2,7 +2,7 @@
     <div class="test-create-header clearfix">
         <div class="container">
             <h1 class="pull-left">
-                <span>BBIT 10-08-2017</span>
+                <span class="test-name">BBIT 10-08-2017</span>
             </h1>
             <div class="pull-right">
                 <div class="settings-menu" [mdMenuTriggerFor]="settingsMenu">
