--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/test-create-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/test-create-dialog.html
@@ -5,7 +5,7 @@
     </div>
     <md-dialog-content>
         <div class="form-group">
-            <label class="h4">Test Name</label>
+            <label>Test Name</label>
             <input type="text" id="name" name="name" class="form-control" (ngModelChange)="ChangeError()" placeholder="Ex. Software Developer Recruitment Test" [(ngModel)]="testNameReference" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&*^{}+;:<>()-]*$" maxlength="150" />
             <div class="errors-container">
                 <span class="error-msg" *ngIf="isWhiteSpaceError || (name.touched && !name.valid && name.errors.required)">Name is required</span>
