--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -15,5 +15,5 @@
             </li>
         </ul>
     </div>
-    <create-test-footer (SaveAndExit)="SaveAndExit()" (SaveAndNext)="SaveAndNext()"></create-test-footer>
+    <create-test-footer (SaveAndExit)="saveAndExit()" (SaveAndNext)="saveAndNext()"></create-test-footer>
 </div>
