--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/instructions/instructions.html
@@ -20,7 +20,7 @@
         </table>
         <h5>Please Note:</h5>
         <ul>
-            <li>This test comprises of <strong *ngFor="let category of instruction.categoryNameList;let isLast=last">{{category}}{{isLast ? '' : ', '}}</strong> questions in no particular order.</li>
+            <li>This test comprises of <strong *ngFor=" let category of instruction.categoryNameList;let i=index">{{category}}{{i==instruction.categoryNameList.length-1 ? ' ': i == instruction.categoryNameList.length -2 ? ' and ' : ' , '}}</strong> questions in no particular order.</li>
             <li>Do not switch to any other tab/browser/app during your test. If you do so, your test will end after <strong>{{instruction.warningTime}}</strong> warnings.</li>
         </ul>
         <div class="text-center">
