--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-footer/create-test-footer.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/shared/create-test-footer/create-test-footer.html
@@ -1,7 +1,7 @@
 ﻿<div class="test-create-footer clearfix">
   <div class="container">
     <ul class="steps pull-left">
-      <li class="h5" [class.active]="router.url==='/tests/sections/' + testId"><a [routerLink]="['/tests/sections',testId]">Select Sections</a></li>
+      <li class="h5" [class.active]="router.url==='/tests/sections/' + testId"><a [routerLink]="['/tests',testId,'sections']">Select Sections</a></li>
       <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
       <li class="h5" [class.active]="router.url==='/tests/' + testId + '/questions'"><a [routerLink]="['/tests',testId,'questions']">Select Questions</a></li>
       <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
