--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -64,7 +64,7 @@
                         <em class="material-icons pull-right" [mdMenuTriggerFor]="quesMoreMenu">more_vert</em>
                         <md-menu #quesMoreMenu="mdMenu" [overlapTrigger]="false" x-position="before">
                             <button md-menu-item (click)="updateQuestion(question)">Edit</button>
-                            <button md-menu-item (click)="deleteQuestionDialog()">Delete</button>
+                            <button md-menu-item (click)="deleteQuestionDialog(question)">Delete</button>
                             <button md-menu-item>Duplicate</button>
                         </md-menu>
                     </div>
