duplicate Question implemented

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -65,7 +65,7 @@
                         <md-menu #quesMoreMenu="mdMenu" [overlapTrigger]="false" x-position="before">
                             <button md-menu-item (click)="editQuestion(question)">Edit</button>
                             <button md-menu-item (click)="deleteQuestionDialog(question)">Delete</button>
-                            <button md-menu-item>Duplicate</button>
+                            <button md-menu-item (click)="duplicateQuestion(question)">Duplicate</button>
                         </md-menu>
                     </div>
                 </div>
